actualización de la ruta de los scripts de js

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=greek,greek-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/ac39874428.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="bootstrap/js/modo_oscuro.js"></script>
+    <script type="text/javascript" src="js/modo_oscuro.js"></script>
     <title>Inicio</title>
   </head>
 
@@ -155,8 +155,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="jquery/jquery-3.4.1.slim.min.js"></script>
-    <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="bootstrap/js/slideShow.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/slideShow.js"></script>
   </body>
 </html>
 
