--- a/eustaciodetesalonica.html
+++ b/eustaciodetesalonica.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/ac39874428.js" crossorigin="anonymous"></script>
     <script src="js/modo_oscuro.js"></script>
-    <title>Inicio</title>
+    <title>Eustacio de Tesalónica</title>
   </head>
 
   <body>
@@ -75,7 +75,6 @@
       </div>
       <button class="btn" onclick="modo_oscuro()" title="Invertir colores"><i class="fas fa-palette"></i></button>
     </nav>
-    <!--Esta es la cabecera. Se puede sustituir por una imagen -->
     <header>
       <div class="flex-container">
         <div class="jumbotron" id="cabecera">
@@ -84,28 +83,17 @@
         </div>
       </div>
     </header>
-    <!--Esto es el contenido de la página -->
     <main class="container">
-      <div class="container">
+      <div class="row">
         <section>
-          <h2>Presentación</h2>
-          <article>
-            <p>Al comienzo del canto <span class="versalitas">v</span> de la Odisea, Zeus ordena a Hermes que lleve un mensaje a la ninfa Calipso:</p>
-            <blockquote>
-              <p>Al instante se anudó en sus pies sus bellas sandalias, de oro, imperecederas, que le transportaban sobre el agua y la tierra sin límites a la par de las ráfagas de viento. Tomó consigo su varita, con la que hechiza los ojos de los hombres, de quien quiere, y con la que, a su vez, también despierta a los durmientes. Con ella en sus manos se echó a volar el poderoso Argifonte.</p>
-              <p class="resto">Descendiendo a la Pieria se lanzó desde el éter al mar. Avanzó luego por sobre las olas semejante a una gaviota que da caza a los peces en los tremendos repliegues del estéril mar y se moja en la espuma salada sus presurosas alas. Parecido a ésta viajaba sobre las numerosas olas Hermes.</p>
-              <footer>
-                <p><cite>Iliada <span class="versalitas">v</span>, vv. 44-54 </cite> (trad. García Gual)</p>
-              </footer>
-            </blockquote>
-            <p class="resto">El <em>Comentario</em> de Eustacio, en un párrafo magistral de su proemio (210-211 M.), recurre a Homero para comparar la descripción de la tierra a vista de pájaro que ofrece el poema de Dionisio con la de este Hermes que vuela raudo desde el éter para obedecer a Zeus; también cuando trae a colación el descenso a tierra de Éride y su medición por parte de las águilas de Zeus. En sentido inverso, el famoso vuelo que emprende Ícaro elevándose sobre la tierra encierra un peligro que no tendrá que afrontar el lector de la <em>Periégesis</em>:</p>
-            <blockquote>
-              <p>Dionisio reelabora la configuración de la tierra cuando se dirige a nosotros, trabajando sobre ella como lo requiere el verso, alzándose ligero con las alas de la palabra, circundando rápidamente toda la ecúmene, como las águilas tantas veces mencionadas con las que el Zeus del mito midió la tierra siguiendo el curso del sol, y transportando consigo al oyente y haciendo que vuele con él, como Dédalo a su compañero de vuelo Ícaro –con la diferencia de que aquí el vuelo es seguro y para ambos sin peligro y no está expuesto a las amenazas del sol. </p>
-              <p class="resto">¿No son acaso el viaje de Hermes penetrando en la tierra y el bastón de oro con el que según Homero da la vuelta volando a la tierra firme y al mar, este camino y método de la periégesis y el punzón en la mano del artesano que graba el mapa de la tierra? El estudiante es conducido por ellos como llevado de la mano, y sin esfuerzo da la vuelta a la ecúmene con toda la velocidad de sus alas, se adelanta con su mente al recorrerla y comprenderla con la palabra guiadora. </p>
-              <p class="resto">Así se imaginaría uno al terrenal Hermes, pero cuando el periegeta, tras abandonar la superficie de la tierra, recorre el círculo del cielo, sigue las líneas, da la vuelta a los polos y mide las estrellas limitándose a rozar lo que está arriba con la mano, señalando con el dedo lo que está aquí abajo, sobrevolando de esta manera la tierra y describiendo los fenómenos celestes, entonces ciertamente este Hermes no es terrenal sino que blandiendo el bastón, por decirlo como el poeta, <q>vuela el poderoso Argeifonte, de bastón dorado</q> (<em>Odisea</em>, canto <span class="versalitas">v</span>, 49). Por esta razón se diría que el poder del método periegético es más sutil y más adecuado que el de la Éride homérica, que <q>en un principio es menuda y se encrespa</q> (<em>Ilíada</em>, canto <span class="versalitas">iv</span>, 442) observando [211 M.] de cerca todo lo que está abajo en la superficie de la tierra, pero después <q>cuando pone los pies en el suelo fija en el cielo la cabeza</q> (<em>Ilíada</em>, canto <span class="versalitas">iv</span>, 442-443), como cuando el periegeta dirige su mirada a lo que atañe al cielo.</p>
-            </blockquote>
-            <p class="resto">Poema y comentario, geografía romana y bizantina, se aliaron así en la voluntad de un profesor constantinopolitano para perpetuar y fijar una imagen del mundo que difundía los descubrimientos de los geógrafos alejandrinos y romanos con una modos expresión de raigambre homérica. Dar a conocer el mundo a través de la visualización de estas obras es una oportunidad para probar que, una vez más, el legado literario de la Antigüedad griega nos llegó marcado a hierro por la mirada que Bizancio proyectó sobre él.</p>
-          </article>
+          <h2>Eustacio de Tesalónica</h2>
+          <p>Es uno de los estudiosos bizantinos más prestigiosos y sin duda la figura literaria de referencia del siglo <span class="versalitas">xii</span>, autor de obras filológicas, retóricas, históricas y teológicas que ejerció gran influencia en la vida cultural bizantina a través tanto de sus composiciones como de sus discípulos. Entre 1166 y 1178 fue profesor de retórica en Constantinopla y es esta labor la que explica la composición de valiosos comentarios a los poemas de Homero y Dionisio Periegeta, así como otros perdidos sobre Píndaro y otros poetas. Desde 1178 hasta su muerte en 1195/6 fue arzobispo de Tesalónica, ciudad en la que dejó una impronta espiritual y cultural. En <em>La toma de Tesalónica</em> narra el saqueo normando de la ciudad acaecido en 1185.</p>
+        </section>
+        <section>
+          <h3>Las <em>Parekbolai</em> o <em>Comentarios a la Periégesis de Dionisio de Alejandría</em></h3>
+          <p>Esta obra fue compuesta después de los ambiciosos y monumentales <em>Comentarios</em> a la <em>Ilíada</em> y la <em>Odisea</em>, a los se que hace referencia en distintos pasajes del comentario a la obra geográfica. Reenviar a su obra anterior permite a Eustacio evitar explicaciones sobre pueblos imaginarios como los etíopes orientales, los trogloditas o los erembos, y ceñirse a unas nociones geográficas marcadas por los descubrimientos alejandrinos. Los fundamentos de esa visión del mundo quedaban establecidos en los primeros versos del poema y en los correspondientes comentarios: una división en tres continentes, Libia, Europa y Asia; un océano rodeándolos sin interrupción e introduciéndose en la tierra continental en cuatro golfos/mares emparejados (el mar Negro con el golfo Arábigo, el mar Caspio con el golfo Pérsico) y en el mar interior, el Mediterráneo. En ese marco general, la descripción geográfica va sumando ingredientes a lo largo de una serie de recorridos que siguen las líneas de costa o saltan entre puntos de referencia de la navegación, dejando los pueblos del interior más desdibujados o incluso, en el caso de los más alejados del Mediterráneo, envueltos en las nieblas de la fábula y el desconocimiento. La península Ibérica, por ejemplo, se reduce al estrecho de Gibraltar, Gadira o Cádiz, Tartesos, el cabo de San Vicente, los Pirineos a cuyo pie habitan los cempsos; junto a ella, Ibiza y unas míticas islas Gimnesias.</p>
+          <p class="resto">Las anotaciones (organizadas sistemáticamente siguiendo el texto del poema) están precedidas por una <strong>carta introductoria</strong> que confirma el público al que estaba destinado el comentario, es decir, la clase educada constantinopolitana a la que pertenecían sus estudiantes, miembros de las familias aristócratas cuyos lazos conformaban las redes del poder imperial en época comnena. El destinatario de la carta es Juan Ducas, hijo de Andrónico Camatero, un estudiante de Eustacio que ha animado a su maestro a componer el comentario geográfico; el valor que ambos dan a la Geografía es referido de forma explícita: el conocimiento geográfico es útil para la vida, despierta el entendimiento del estudioso y los militares y el emperador lo pueden utilizar; asimismo, como cualquier otro conocimiento, es útil para distinguirse de aquellos que carecen de él. Un tío de Ducas, Juan Camatero, orador de renombre, escribió una <em>Introducción a la Astronomía</em>, y sabemos de él que consideraba los poemas de Arato y de Dionisio Periegeta obras complementarias y necesitadas de ilustración si los estudiantes pretendían comprenderlas en toda su complejidad.</p>
+          <p class="resto">Eustacio despliega una impresionante batería de fuentes en su comentario, a las que alude por lo general por el sobrenombre: así, igual que Dionisio es el Periegeta, Estrabón es el Geógrafo, Aristófanes el Cómico, Homero el Poeta… Pero las obras de referencia más usadas son sin duda Estrabón y Heródoto, que le permiten completar y precisar las alusiones del poema, descarnadas de puro sintéticas. Por otra parte, los rasgos distintivos de la <em>Periégesis</em>, su vocabulario arcaico y poco común, su expresión manierista, las cuestiones de toponimia y cartografía que suscita, las alusiones mitológicas, todo hacía necesarios los escolios exegéticos; estos complementaban una paráfrasis en koine contigua al poema en muchas copias bizantinas de la obra, que ayudaba a superar las dificultades de comprensión, confirmando el interés del contenido para sus lectores. Una versión en prosa, en todo caso, no resolvía todos los problemas ni ambigüedades del poema, así que Eustacio se aplica a la labor de consultar todos los textos que tenía a su disposición para valorar las informaciones no rara vez incompatibles y a menudo diferentes sobre los pueblos y lugares del mundo conocido. El profesor bizantino, con buen criterio, no pretenderá completar la información que da Dionisio añadiendo accidentes geográficos o gentilicios, sino explicarla y enriquecerla utilizando el formato de <em>parekbolai</em> o «anotaciones puntuales», esto es, «fichas» de contenido articulado sobre un único tema precedidas por <em>hoti</em> «Que…» (aunque puede haber añadidos complementarios encabezados por <em>semeiosai</em> «nótese» o por <em>hora</em> «fíjate en»).</p>
         </section>
       </div>
     </main>
