--- a/dionisioperiegeta.html
+++ b/dionisioperiegeta.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/ac39874428.js" crossorigin="anonymous"></script>
     <script src="js/modo_oscuro.js"></script>
-    <title>Inicio</title>
+    <title>Dionisio Periegeta</title>
   </head>
 
   <body>
@@ -75,7 +75,6 @@
       </div>
       <button class="btn" onclick="modo_oscuro()" title="Invertir colores"><i class="fas fa-palette"></i></button>
     </nav>
-    <!--Esta es la cabecera. Se puede sustituir por una imagen -->
     <header>
       <div class="flex-container">
         <div class="jumbotron" id="cabecera">
@@ -84,29 +83,38 @@
         </div>
       </div>
     </header>
-    <!--Esto es el contenido de la página -->
     <main class="container">
-      <div class="container">
+      <h2>Dionisio Periegeta</h2>
+      <div class="row">
         <section>
-          <h2>Presentación</h2>
-          <article>
-            <p>Al comienzo del canto <span class="versalitas">v</span> de la Odisea, Zeus ordena a Hermes que lleve un mensaje a la ninfa Calipso:</p>
-            <blockquote>
-              <p>Al instante se anudó en sus pies sus bellas sandalias, de oro, imperecederas, que le transportaban sobre el agua y la tierra sin límites a la par de las ráfagas de viento. Tomó consigo su varita, con la que hechiza los ojos de los hombres, de quien quiere, y con la que, a su vez, también despierta a los durmientes. Con ella en sus manos se echó a volar el poderoso Argifonte.</p>
-              <p class="resto">Descendiendo a la Pieria se lanzó desde el éter al mar. Avanzó luego por sobre las olas semejante a una gaviota que da caza a los peces en los tremendos repliegues del estéril mar y se moja en la espuma salada sus presurosas alas. Parecido a ésta viajaba sobre las numerosas olas Hermes.</p>
-              <footer>
-                <p><cite>Iliada <span class="versalitas">v</span>, vv. 44-54 </cite> (trad. García Gual)</p>
-              </footer>
-            </blockquote>
-            <p class="resto">El <em>Comentario</em> de Eustacio, en un párrafo magistral de su proemio (210-211 M.), recurre a Homero para comparar la descripción de la tierra a vista de pájaro que ofrece el poema de Dionisio con la de este Hermes que vuela raudo desde el éter para obedecer a Zeus; también cuando trae a colación el descenso a tierra de Éride y su medición por parte de las águilas de Zeus. En sentido inverso, el famoso vuelo que emprende Ícaro elevándose sobre la tierra encierra un peligro que no tendrá que afrontar el lector de la <em>Periégesis</em>:</p>
-            <blockquote>
-              <p>Dionisio reelabora la configuración de la tierra cuando se dirige a nosotros, trabajando sobre ella como lo requiere el verso, alzándose ligero con las alas de la palabra, circundando rápidamente toda la ecúmene, como las águilas tantas veces mencionadas con las que el Zeus del mito midió la tierra siguiendo el curso del sol, y transportando consigo al oyente y haciendo que vuele con él, como Dédalo a su compañero de vuelo Ícaro –con la diferencia de que aquí el vuelo es seguro y para ambos sin peligro y no está expuesto a las amenazas del sol. </p>
-              <p class="resto">¿No son acaso el viaje de Hermes penetrando en la tierra y el bastón de oro con el que según Homero da la vuelta volando a la tierra firme y al mar, este camino y método de la periégesis y el punzón en la mano del artesano que graba el mapa de la tierra? El estudiante es conducido por ellos como llevado de la mano, y sin esfuerzo da la vuelta a la ecúmene con toda la velocidad de sus alas, se adelanta con su mente al recorrerla y comprenderla con la palabra guiadora. </p>
-              <p class="resto">Así se imaginaría uno al terrenal Hermes, pero cuando el periegeta, tras abandonar la superficie de la tierra, recorre el círculo del cielo, sigue las líneas, da la vuelta a los polos y mide las estrellas limitándose a rozar lo que está arriba con la mano, señalando con el dedo lo que está aquí abajo, sobrevolando de esta manera la tierra y describiendo los fenómenos celestes, entonces ciertamente este Hermes no es terrenal sino que blandiendo el bastón, por decirlo como el poeta, <q>vuela el poderoso Argeifonte, de bastón dorado</q> (<em>Odisea</em>, canto <span class="versalitas">v</span>, 49). Por esta razón se diría que el poder del método periegético es más sutil y más adecuado que el de la Éride homérica, que <q>en un principio es menuda y se encrespa</q> (<em>Ilíada</em>, canto <span class="versalitas">iv</span>, 442) observando [211 M.] de cerca todo lo que está abajo en la superficie de la tierra, pero después <q>cuando pone los pies en el suelo fija en el cielo la cabeza</q> (<em>Ilíada</em>, canto <span class="versalitas">iv</span>, 442-443), como cuando el periegeta dirige su mirada a lo que atañe al cielo.</p>
-            </blockquote>
-            <p class="resto">Poema y comentario, geografía romana y bizantina, se aliaron así en la voluntad de un profesor constantinopolitano para perpetuar y fijar una imagen del mundo que difundía los descubrimientos de los geógrafos alejandrinos y romanos con una modos expresión de raigambre homérica. Dar a conocer el mundo a través de la visualización de estas obras es una oportunidad para probar que, una vez más, el legado literario de la Antigüedad griega nos llegó marcado a hierro por la mirada que Bizancio proyectó sobre él.</p>
-          </article>
+          <h3>¿Quién era Dionisio de Alejandría? </h3>
+          <p>Muy escasos andamos de información sobre este Dionisio, también llamado «el Periegeta» por ser la <em>Periégesis de la tierra habitada</em> la única obra suya que nos ha llegado y para distinguirlo de otros Dionisios alejandrinos que escribieron sobre geografía. Las fuentes que arrojan alguna luz sobre su persona son el propio poema que compuso y las biografías breves y escolios (notas exegéticas o comentarios) que se han transmitido junto a este. Eustacio de Tesalónica (ca. 1115–1195/6), en el proemio/carta a su <em>Comentario</em>, recoge esa información:</p>
+          <blockquote>
+            <p>[…] se cuenta que Dionisio es originario de Libia; se dice que escribió otros libros: <em>Lithiaka</em>, <em>Ornithiaka</em> y <em>Bassarika</em>. Los <em>Ornithiaka</em>, por su parte, fueron atribuidos a Dionisio por la similitud del estilo, mientras que los <em>Bassarika</em>, por estar poco pulidos, no fueron juzgados dignos de este y se atribuyeron a Dionisio de Samos; en tercer lugar, los <em>Ornithiaka</em> lo fueron a otro Dionisio, cierto escritor de Filadelfia, al que juzgaban huero por su incorrecta dicción.</p>
+            <p class="resto">Los antiguos llaman el presente poema histórico, compuesto de información geográfica, administrativa, analística y genealógica, que –dicen– son las distintas facetas de la historia: geográfica, porque el objetivo general de la obra es la descripción de los lugares de la tierra; administrativa, en tanto en cuanto narra otras cosas y expone las costumbres de los pueblos; analística porque deja constancia de <strong>la época en la que él vivió, que no es la de los cónsules sino la de los emperadores</strong>; y genealógica, por ejemplo, cuando dice que los sauromatas descienden de las amazonas y los locrios epicefirios de esclavos.</p>
+          </blockquote>
+          <h3>La <em>Vita Chisiana</em></h3>
+          <p>Eustacio había comprendido que este poeta, y probablemente también profesor, alejandrino, era de época imperial, pues en la <em>Periégesis</em> no faltan pasajes en los que se alude al poder del emperador romano, pero desde la Antigüedad tardía hubo poco acuerdo sobre en época de qué emperador se compuso el poema. Dos códices del siglo <span class="versalitas">xiv</span> (<a href="https://pinakes.irht.cnrs.fr/notices/cote/65207/" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador" target="_blank" itemprop="url">Vat. Chig. R.IV.20</a> y <a href="https://pinakes.irht.cnrs.fr/notices/cote/52408/" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador" target="_blank" itemprop="url">Par. gr. 2772</a>) han conservado como prolegómeno a la <em>Periegesis</em> un texto al que se dio el nombre de <em>Vita Chisiana</em> (llamada así por el manuscrito perteneciente al fondo Chigi de la Biblioteca Vaticana en que se descubrió) y que despertó gran interés entre los estudiosos de la literatura antigua por la abundancia de versos inéditos que contenía. De biografía de Dionisio tiene más bien poco, pero la primera parte de la <em>Vita</em> sí analiza el poema con vistas a establecer su cronología. Así empieza:</p>
+          <blockquote>Dionisio Periegeta, hijo de Dionisio, era originario de Alejandría y de noble cuna; vivió en época imperial, como él mismo afirma en este poema (<abbr title="verso">v.</abbr> 355): «gloriosa Roma, magno hogar de mis señores». Cuando describe la región de Media afirma claramente que Augusto es anterior a su época, pues, compensando la derrota de Craso, los partos fueron derrotados por aquel emperador una vez más, como dice en estos versos (vv. 1051-52): «pero aun siendo imbatibles, la lanza del emperador ausonio los amansó».</blockquote>
+          <h2>Los acrósticos de la <em>Periégesis</em></h2>
+          <p>Una datación más precisa sólo fue posible cuando se descubrieron los mensajes encerrados en algunos acrósticos, es decir, palabras o frases conformadas a partir de la primera letra de algunos versos que hacen las veces de «sello de autor». Son dos:</p>
+          <ol>
+            <li><abbr title="versos">vv.</abbr> 109-134: <span lang="el">ΕΜΗ ΔΙΟΝΥΣΙΟΥ ΤΩΝ ΕΝΤΟΣ ΦΑΡΟΥ</span>. En este acróstico, Dionisio se presenta como originario de Alejandría «de los que viven Faro adentro», en alusión a la famosa isla que ha dado nombre a todos los faros y que se encontraba en el delta del Nilo.</li>
+            <li><abbr title="versos">vv.</abbr> 513-532: <span lang="el">ΘΕΟΣ ΕΡΜΗΣ ΕΠΙ ΑΔΡΙΑΝΟΥ</span>. «En época de Adriano» zanja el debate sobre la fecha de composición asegurando ésta en los años 117-138 <abbr title="después de Cristo">d.C.</abbr> La fecha ha querido precisarse en torno a 130 <abbr title="después de Cristo">d.C.</abbr>, cuando tuvo lugar una visita de Adriano a Egipto. El papel del dios Hermes en el poema, por su parte, ha sido analizado por distintos estudiosos, en especial por Christian Jacob. Hermes es el dios mensajero, el que domina el espacio abriéndose paso por caminos no siempre rectos.</li>
+          </ol>
+          <h3>La fortuna de la <em>Periégesis</em> de Dionisio</h3>
+          <p>El destinatario de la <em>Periégesis</em>, un poema en hexámetros de raigambre homérica que resume en 1186 versos el conocimiento sobre el mundo habitado (que es lo que significa <em>oikoumenê</em> o ecúmene), es el joven ciudadano romano, de quien se esperaba que amueblara su mente con nociones de geografía y antropología. Pero el contenido general y sintético de la <em>Periégesis</em> no está reñido con una sofisticación literaria que a menudo obliga a descifrar el sentido de los versos, mediante escolios o con una versión en prosa (paráfrasis) que suelen acompañar el poema.</p>
+          <p class="resto">La complejidad de la obra no impidió su éxito rotundo, desde la primera traducción de Avieno (hacia 360) hasta la edición aldina de 1512. Unos 150 códices bizantinos lo conservan, normalmente junto con otros poemas (de Hesíodo, de Píndaro, de Licofrón, de Opiano) u obras teatrales. Es un número extraordinariamente alto de testimonios, casi todos ellos de época paleóloga (1261-1453), cuando la <em>Periégesis</em> se convirtió en una de las obras del canon escolar bizantino. A ello contribuyeron los profesores constantinopolitanos como Juan Tzetzes y Eustacio de Tesalónica que en el siglo <span class="versalitas">xii</span> explicaron el poema en sus cursos.</p>
         </section>
+        <div class="container">
+          <figure>
+            <a href="https://commons.wikimedia.org/wiki/File:Karte_Dionysius.jpg" title="Al hacer clic en el enlace se abrirá una pestaña en el navegador" target="_blank" itemprop="url"><img alt="Karte Dionysius" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Karte_Dionysius.jpg/512px-Karte_Dionysius.jpg" class="img-fluid mx-auto d-block figure-img"></a>
+            <figcaption class="figure-caption">
+              <p>El mundo según la descripción que del mismo hace Dionisio en su obra.</p>
+              <p>Miller, K. <span lang="de"><em>Mappaemundi: die altesten Welkarten</em>. Stuttgart: J. Roth</span>, 1895. <a href="https://commons.wikimedia.org/wiki/File:Karte_Dionysius.jpg" title="Al hacer clic en el enlace se abrirá una pestaña en el navegador" target="_blank" itemprop="url">Dominio público, Wikimedia Commons</a></p>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </main>
     <footer class="container">
