--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Proyecto</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="./proyecto.html" title="Conocer el proyecto">Sobre el proyecto</a>
-              <a class="dropdown-item" href="./proyecto.html#miembros" title="Conocer a los integrantes del proyecto">Miembros</a>
-              <a class="dropdown-item" href="./proyecto.html#cronograma" title="Vida del proyecto">Historia</a>
-              <a class="dropdown-item" href="./proyecto.html#recursos" title="Enlaces a otros materiales generados en el proyecto">Recursos</a>
+              <a class="dropdown-item" href="./proyecto.html" title="Conocer el proyecto" target="_blank">Sobre el proyecto</a>
+              <a class="dropdown-item" href="./proyecto.html#miembros" title="Conocer a los integrantes del proyecto" target="_blank">Miembros</a>
+              <a class="dropdown-item" href="./proyecto.html#cronograma" title="Vida del proyecto" target="_blank">Historia</a>
+              <a class="dropdown-item" href="./proyecto.html#recursos" title="Enlaces a otros materiales generados en el proyecto" target="_blank">Recursos</a>
             </div>
           </li>
           <!--Esto es otro menú desplegable. Hay que cambiar el valor de href="" por la url de la página. Si no hay ninguna, el valor es # -->
@@ -59,13 +59,13 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#" title="Este enlace no está disponible todavía">Mapa</a>
+            <a class="nav-link" href="http://usig-proyectos.cchs.csic.es/homero/#" title="Ver la Periégesis de Dionisio en un mapa interactivo" target="_blank">Mapa</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./geografia.html" title="Aprender sobre la geografía antigua y su transmisión">La Geografía antigua</a>
+            <a class="nav-link" href="./geografia.html" title="Aprender sobre la geografía antigua y su transmisión" target="_blank">La Geografía antigua</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./creditos.html" title="Créditos, agradecimientos, licencia, y otros detalles técnicos">Créditos</a>
+            <a class="nav-link" href="./creditos.html" title="Créditos, agradecimientos, licencia, y otros detalles técnicos" target="_blank">Créditos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="mailto:elvuelodehermes@gmail.com?subject:Contacto desde la web" title="Contactar con el proyecto">Contacto</a>
