--- a/proyecto.html
+++ b/proyecto.html
@@ -192,15 +192,15 @@
                 <h4>2021</h4>
                 <p>Lanzamiento de la web del proyecto</p>
                 <p>Estancia de investigación de Paula Caballero Sánchez en el <abbr title="Centro de Ciencias Humanas y Sociales">CCHS</abbr> del <abbr title="Consejo Superior de Investigaciones Científicas">CSIC</abbr> (Madrid), durante el mes de septiembre.</p>
-                <p itemscope itemtype="https://schema.org/Event">Comunicación de Paula Caballero Sánchez en la <span lang="en"><em>International Conference on Etymological Theories and Practice in Ancient and Byzantine Greece</em></span> (<span itemprop="address" itemscope itemtype="https://schema.org/PostalAddress"><span itemprop="addressLocality">Tesalónica, Grecia,</span></span> <meta itemprop="startDate" content="2021-11-18">18 - <meta itemprop="endtDate" content="2021-11-20">20 de noviembre de 2021).</p>
+                <p>Comunicación de Paula Caballero Sánchez en la <span lang="en"><em>International Conference on Etymological Theories and Practice in Ancient and Byzantine Greece</em></span> (Tesalónica, Grecia, 18-20 de noviembre de 2021).</p>
                 <p>Viaje de investigación de Carmen García Bueno a París para consultar microfilmes y manuscritos en el <abbr title="Institut de Recherche et d'Histoire des Textes">IRHT</abbr> y la <abbr title="Bibliothèque nationale de France">BnF</abbr>.</p>
               </div>
             </div>
             <div class="timeline-container timeline-left">
               <div class="timeline-content">
                 <h4>2022</h4>
-                <p itemscope itemtype="https://schema.org/Event">Comunicación de Paula Caballero Sánchez en las <em>XIX Jornadas de Bizancio</em> (<span itemprop="address" itemscope itemtype="https://schema.org/PostalAddress"><span itemprop="addressLocality">Madrid</span></span> <meta itemprop="startDate" content="2022-01-25"><meta itemprop="endtDate" content="2022-01-25">25 de enero de 2022).</p>
-                <p itemscope itemtype="https://schema.org/Event">Comunicación de Inmaculada Pérez Martín en las <em>XIX Jornadas de Bizancio</em> (<span itemprop="address" itemscope itemtype="https://schema.org/PostalAddress"><span itemprop="addressLocality">Madrid</span></span> <meta itemprop="startDate" content="2022-01-26"><meta itemprop="endtDate" content="2022-01-26">26 de enero de 2022).</p>
+                <p>Comunicación de Paula Caballero Sánchez en las <em>XIX Jornadas de Bizancio</em> (Madrid, 25 de enero de 2022).</p>
+                <p>Comunicación de Inmaculada Pérez Martín en las <em>XIX Jornadas de Bizancio</em> (Madrid, 26 de enero de 2022).</p>
               </div>
             </div>
           </div>
