--- a/proyecto.html
+++ b/proyecto.html
@@ -199,8 +199,8 @@
             <div class="timeline-container timeline-left">
               <div class="timeline-content">
                 <h4>2022</h4>
-                <p>Comunicación de Paula Caballero Sánchez en las <em>XIX Jornadas de Bizancio</em> (Madrid, 25 de enero de 2022).</p>
-                <p>Comunicación de Inmaculada Pérez Martín en las <em>XIX Jornadas de Bizancio</em> (Madrid, 26 de enero de 2022).</p>
+                <p>Comunicación de Paula Caballero Sánchez en las <em><span class="versalitas"XIX</span> Jornadas de Bizancio</em> (Madrid, 25 de enero de 2022).</p>
+                <p>Comunicación de Inmaculada Pérez Martín en las <em><span class="versalitas"XIX</span> Jornadas de Bizancio</em> (Madrid, 26 de enero de 2022).</p>
               </div>
             </div>
           </div>
