--- a/proyecto.html
+++ b/proyecto.html
@@ -33,10 +33,10 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Proyecto</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="./proyecto.html" title="Conocer el proyecto" target="_blank">Sobre el proyecto</a>
-              <a class="dropdown-item" href="./proyecto.html#miembros" title="Conocer a los integrantes del proyecto" target="_blank">Miembros</a>
-              <a class="dropdown-item" href="./proyecto.html#cronograma" title="Vida del proyecto" target="_blank">Historia</a>
-              <a class="dropdown-item" href="./proyecto.html#recursos" title="Enlaces a otros materiales generados en el proyecto" target="_blank">Recursos</a>
+              <a class="dropdown-item" href="./proyecto.html" title="Conocer el proyecto">Sobre el proyecto</a>
+              <a class="dropdown-item" href="./proyecto.html#miembros" title="Conocer a los integrantes del proyecto">Miembros</a>
+              <a class="dropdown-item" href="./proyecto.html#cronograma" title="Vida del proyecto">Historia</a>
+              <a class="dropdown-item" href="./proyecto.html#recursos" title="Enlaces a otros materiales generados en el proyecto">Recursos</a>
             </div>
           </li>
           <!--Esto es otro menú desplegable. Hay que cambiar el valor de href="" por la url de la página. Si no hay ninguna, el valor es # -->
@@ -62,10 +62,10 @@
             <a class="nav-link" href="http://usig-proyectos.cchs.csic.es/homero/#" title="Ver la Periégesis de Dionisio en un mapa interactivo" target="_blank">Mapa</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./geografia.html" title="Aprender sobre la geografía antigua y su transmisión" target="_blank">La Geografía antigua</a>
+            <a class="nav-link" href="./geografia.html" title="Aprender sobre la geografía antigua y su transmisión">La Geografía antigua</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./creditos.html" title="Créditos, agradecimientos, licencia, y otros detalles técnicos" target="_blank">Créditos</a>
+            <a class="nav-link" href="./creditos.html" title="Créditos, agradecimientos, licencia, y otros detalles técnicos">Créditos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="mailto:elvuelodehermes@gmail.com?subject:Contacto desde la web" title="Contactar con el proyecto">Contacto</a>
@@ -193,7 +193,7 @@
                 <p>Lanzamiento de la web del proyecto</p>
                 <p>Estancia de investigación de Paula Caballero Sánchez en el <abbr title="Centro de Ciencias Humanas y Sociales">CCHS</abbr> del <abbr title="Consejo Superior de Investigaciones Científicas">CSIC</abbr> (Madrid), durante el mes de septiembre.</p>
                 <p>Comunicación de Paula Caballero Sánchez en la <span lang="en"><em>International Conference on Etymological Theories and Practice in Ancient and Byzantine Greece</em></span> (Tesalónica, Grecia, 18-20 de noviembre de 2021).</p>
-                <p>Viaje de investigación de Carmen García Bueno a París para consultar microfilmes y manuscritos en el <abbr title="Institut de Recherche et d'Histoire des Textes">IRHT</abbr> y la <abbr title="Bibliothèque nationale de France">BnF</abbr>.</p>
+                <p>Viaje de investigación de Carmen García Bueno a París para consultar microfilmes y manuscritos en el <abbr title="Institut de Recherche et d'Histoire des Textes">IRHT</abbr> y la <abbr title="Bibliothèque nationale de France">BnF</abbr> (29 de noviembre - 3 de diciembre de 2021).</p>
               </div>
             </div>
             <div class="timeline-container timeline-left">
