--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="row justify-content-around align-items-center">
               <div class="col-md-4 col-12">
                 <div class="wrap-img" id="CCHS">
-                  <a href="http://cchs.csic.es/" target="_blank"><img src="./img/logos/MICINN-CCHS.png" class="img-responsive img-fluid" alt="logo CCHS" title="Ir al sitio web del CCHS"></a>
+                  <a href="http://cchs.csic.es/" target="_blank"><img src="./img/logos/MICINN-CCHS.jpg" class="img-responsive img-fluid" alt="logo CCHS" title="Ir al sitio web del CCHS"></a>
                 </div>
               </div>
               <div class="col-md-4 col-12">
