--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               </div>
               <div class="col-md-4 col-12">
                 <div class="wrap-img" id="CSIC">
-                  <a href="http://www.csic.es" target="_blank"><img src="./img/logos/MCINN__CSIC.jpg" class="img-responsive img-fluid" alt="logo CSIC y MCINN" title="Ir al sitio web del CSIC"></a>
+                  <a href="http://www.csic.es" target="_blank"><img src="./img/logos/MCINN_CSIC.jpg" class="img-responsive img-fluid" alt="logo CSIC y MCINN" title="Ir al sitio web del CSIC"></a>
                 </div>
               </div>
             </div>
