--- a/creditos.html
+++ b/creditos.html
@@ -126,7 +126,7 @@
       </section>
     </main>
     <footer class="container">
-      <section id="carrusel-logos">
+     <section id="carrusel-logos">
         <div class="slideshow-container">
           <div class="mySlides">
             <div class="row justify-content-around align-items-center">
@@ -135,7 +135,7 @@
                   <a href="https://www.fbbva.es" target="_blank"><img src="./img/logos/FundacionBBVA.svg" class="img-responsive img-fluid" alt="logo Fundación BBVA" title="Ir al sitio web de la Fundación BBVA"></a>
                 </div>
               </div>
-             <div class="col-md-4 col-12">
+              <div class="col-md-4 col-12">
                 <div class="wrap-img" id="SEEC">
                   <a href="http://www.estudiosclasicos.org/" target="_blank"><img src="./img/logos/SEEC.png" class="img-responsive img-fluid" alt="logo Sociedad Española de Estudios Clásicos" title="Ir al sitio web de la Sociedad Española de Estudios Clásicos"></a>
                 </div>
@@ -144,6 +144,7 @@
                 <div class="wrap-img" id="CSIC">
                   <a href="http://www.csic.es" target="_blank"><img src="./img/logos/MCINN_CSIC.jpg" class="img-responsive img-fluid" alt="logo CSIC y MCINN" title="Ir al sitio web del CSIC"></a>
                 </div>
+              </div>
             </div>
           </div>
           <div class="mySlides">
