--- a/dionisioperiegeta.html
+++ b/dionisioperiegeta.html
@@ -117,7 +117,7 @@
       </div>
     </main>
     <footer class="container">
-      <section id="carrusel-logos">
+<section id="carrusel-logos">
         <div class="slideshow-container">
           <div class="mySlides">
             <div class="row justify-content-around align-items-center">
@@ -135,6 +135,7 @@
                 <div class="wrap-img" id="CSIC">
                   <a href="http://www.csic.es" target="_blank"><img src="./img/logos/MCINN_CSIC.jpg" class="img-responsive img-fluid" alt="logo CSIC y MCINN" title="Ir al sitio web del CSIC"></a>
                 </div>
+              </div>
             </div>
           </div>
           <div class="mySlides">
